kubernetes/superset/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: superset-redis
spec:
  selector:
    matchLabels:
      app: superset-redis
  serviceName: superset-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: superset-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data
