kubernetes/superset/service-superset-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-ssh
spec:
  type: NodePort
  selector:
    app: superset
  ports:
  - port: 443
    targetPort: 443
