kubernetes/superset/service-superset.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
spec:
  type: NodePort
  selector:
    app: superset
  ports:
  - port: 8088
    targetPort: 8088
